Fixing width of Case study stats block on ie

--- a/content/themes/igcp/inc/scss/ie.scss
+++ b/content/themes/igcp/inc/scss/ie.scss
@@ -68,7 +68,8 @@
         margin-right: auto;
       }
       @include break-min($lg) {
-        @include ignore-restrained-width;
+        margin-left: calc((-100vw / 2 + #{$restrained-width / 2}) + #{$gutter});
+        margin-right: calc((-100vw / 2 + #{$restrained-width / 2}) + #{$gutter});
       }
     }
 
